--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
